# Plugger

./: LICENSE  README.md  pyproject.toml
examples/: buisnessLogic.py  extensionPointDef.py  sampleApiDef.py  sampleApiUse.py  samplePlugin.py
examples/decorator/: sampleDecoratorUse.py
src/plugger/: __init__.py  decorator.py  exceptions.py  load.py  plugin.py
