[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plugger"
version = "0.1.0"
authors = [
  { name="Lennart Koehler", email="lennart1705@gmail.com" },
]
description = "A minimalistic python plugin management framework."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Leko1705/Plugger"